# Social-Gaming-Platform

./: .gitignore  CMakeLists.txt  README.md  script.sh
app/: CMakeLists.txt  compile_commands.json
app/.cache/clangd/index/: ChatWindow.cpp.523CC26A1153030C.idx  ChatWindow.cpp.60D03B67E4130DA4.idx  ChatWindow.h.2549F26E9CD8D13F.idx  ChatWindow.h.3CB73A365436AA73.idx  Client.cpp.4797E9166B3CAD93.idx  Client.cpp.5B0C8F6EC7610940.idx  Client.h.30A095FAEF5D2E03.idx  Client.h.485AD8CEF0BFD5AA.idx  Game.cpp.B788718F70257316.idx  Game.cpp.B9FA0F8FA05217AA.idx  Game.h.8895905346C2F6E4.idx  Game.h.C420A576A5E967A0.idx  RPS.cpp.17D0A9CC244B7D80.idx  RPS.cpp.52E7384AEA393914.idx  RPS.h.017F3EF4D97E4368.idx  RPS.h.D6D7706875FE5A6C.idx  Server.cpp.63F99C8DFFBBD35B.idx  Server.cpp.BAEC18294491E60E.idx  Server.h.5256E70F8F995409.idx  Server.h.AD712AA279D707C4.idx  User.cpp.56075F00B39DCFBC.idx  User.cpp.91991EB0306C6362.idx  User.h.3FA4209446991AF6.idx  User.h.538A50C5C15CDC31.idx  chatclient.cpp.4D05590B9E7F2D88.idx  chatclient.cpp.891DB1BB7C7C6F39.idx  chatclient.cpp.D1AB99398D5631E6.idx  chatclient.cpp.FA1821D55DDCBE1E.idx  chatserver.cpp.6A2315145E7338E8.idx  chatserver.cpp.BC45A3B0E2F6503C.idx  controlStructures.cpp.68B40B642806033E.idx  controlStructures.cpp.90622BF3C2D541F0.idx  controlStructures.h.4D904D53D91DA0FD.idx  controlStructures.h.E169A37682E31F14.idx  dataVariant.h.5D36DE46D35A1020.idx  dataVariant.h.64AEF0B2D9BFF0CC.idx  demo.cpp.DB2FE4B40F74D3D1.idx  demo.cpp.DF4C8EFC92218B55.idx  featureToggle.h.E486FB3FE0A1004B.idx  featuretoggle.cpp.C18003F179ED43A1.idx  (+138 more)
app/chatclient-logic/: CMakeLists.txt  ChatClientLogic.cpp
app/chatclient-logic/include/: ChatClientLogic.h
app/feature-toggle/: CMakeLists.txt  featureToggle.cpp
app/feature-toggle/include/: featureToggle.h
app/game-logic/: CMakeLists.txt  Game.cpp  Lobby.cpp  LobbyManager.cpp  User.cpp  demo.cpp
app/game-logic/include/: Game.h  Lobby.h  LobbyManager.h  User.h
app/game-specification/: CMakeLists.txt  Configuration.cpp  Constants.cpp  GameContext.cpp  GameManager.cpp  GameSpecificationFactory.cpp  GameSpecificationParser.cpp  ParserUtility.cpp  RuleFactory.cpp  Rules.cpp  RulesParser.cpp  SectionValueMap.cpp  SetupRule.cpp  ValueMap.cpp  demo.cpp  printSExpression.py
app/game-specification/games/: rock-paper-scissors.game
app/game-specification/include/: Configuration.h  Constants.h  EnumDescription.h  GameContext.h  GameFileLoader.h  GameManager.h  GameObjectFactory.h  GameSpecificationFactory.h  GameSpecificationParser.h  ParserUtility.h  PerAudience.h  PerPlayer.h  Rule.h  RuleFactory.h  Rules.h  RulesParser.h  SectionValueMap.h  SetupRule.h  SyntaxTree.h  ValueMap.h  Variables.h
app/lib/: CMakeLists.txt
app/lib/rules/: CMakeLists.txt  Deal.cpp  Discard.cpp  Extend.cpp  ForLoop.cpp  InParallel.cpp  InputChoice.cpp  Match.cpp  MatchEntry.cpp  Message.cpp  ParallelForLoop.cpp  Reverse.cpp  Scores.cpp  Shuffle.cpp  Sort.cpp  WhileLoop.cpp
app/lib/rules/include/: Rule.h
app/lib/utils/: BinaryExpressionHandler.cpp  BuiltInUtility.cpp  CMakeLists.txt  Utility.cpp  humanInput.cpp  inputRequestQueue.cpp  listOperations.cpp  mapList.tpp  sharedListFunctions.tpp  timing.cpp
app/lib/utils/include/: BinaryExpressionHandler.h  BuiltInUtility.h  Rule.h  Utility.h  controlStructures.h  dataVariant.h  humanInput.h  humanInputType.h  inputRequestQueue.h  list.h  mapList.h  sharedListFunctions.h
app/process-game-file/: demo.cpp
app/process-game-file/games/: rock-paper-scissors.game
app/test/: CMakeLists.txt  test_FeatureToggle.cpp  test_GameClass.cpp  test_GameManager.cpp  test_GameSpecificationParser.cpp  test_ListOperations.cpp  test_LobbyClass.cpp  test_Timing.cpp  test_UserRoleManagement.cpp  test_chatclient.cpp  test_variablesAndExpressions.cpp
app/web-socket-networking/: CMakeLists.txt  README.md
app/web-socket-networking/lib/: CMakeLists.txt
app/web-socket-networking/lib/networking/include/: Server.h
app/web-socket-networking/lib/networking/src/: Server.cpp
app/web-socket-networking/lib/string_utils/include/: string_utils.h
app/web-socket-networking/lib/string_utils/src/: string_utils.cpp
app/web-socket-networking/tools/client-ncurses/: CMakeLists.txt  ChatWindow.cpp  ChatWindow.h  chatclient.cpp
app/web-socket-networking/tools/server/: CMakeLists.txt  chatserver.cpp
game-logic/: CMakeLists.txt  Game.cpp  RPS.cpp  User.cpp  demo.cpp
game-logic/include/: Game.h  RPS.h  User.h  lobby.h
lib/utils/: CMakeLists.txt  controlStructures.cpp  humanInput.cpp  list.tpp  listOperations.cpp
lib/utils/include/: controlStructures.h  dataVariant.h  humanInput.h  listOperations.h  timing.h
process-game-file/: CMakeLists.txt
test/: CMakeLists.txt  test_GameClass.cpp
web-socket-networking/lib/: CMakeLists.txt
web-socket-networking/lib/lobby/: CMakeLists.txt
web-socket-networking/lib/lobby/include/: lobby.h
web-socket-networking/lib/lobby/src/: lobby.cpp
web-socket-networking/lib/networking/include/: Server.h
web-socket-networking/lib/string_utils/: CMakeLists.txt
web-socket-networking/lib/user/: CMakeLists.txt
web-socket-networking/lib/user/include/: User.h
web-socket-networking/lib/user/src/: User.cpp
web-socket-networking/tools/server/: CMakeLists.txt  chatserver.cpp
